# tdm_rulesgen

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NL-to-Python-Generation-DSL.md  NL-to-Python-Generation-Overview.md  NOTICE  README.md  Recommended Scaffold for a Uvicorn-Based Python REST API.md  SECURITY.md  compose.opensandbox.yaml  compose.yaml  lychee.toml  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.local.md  settings.json
.claude/agents/: rulesgen-architect.md  rulesgen-code-reviewer.md  rulesgen-codebase-researcher.md  rulesgen-docs-reviewer.md  rulesgen-implementation-engineer.md  rulesgen-integration-test-engineer.md  rulesgen-release-engineer.md  rulesgen-security-reviewer.md  rulesgen-technical-writer.md  rulesgen-test-engineer.md
.claude/rules/: api-contract.md  ci-release.md  documentation-contract.md  dsl-and-llm.md  project-architecture.md  python-quality.md  security-and-secrets.md  testing-contract.md
.claude/skills/rulesgen-api-debugging/: SKILL.md
.claude/skills/rulesgen-bootstrap/: SKILL.md
.claude/skills/rulesgen-ci-triage/: SKILL.md
.claude/skills/rulesgen-docs-authoring/: SKILL.md
.claude/skills/rulesgen-docs-publish/: SKILL.md
.claude/skills/rulesgen-docs-testing/: SKILL.md
.claude/skills/rulesgen-dsl-authoring/: SKILL.md
.claude/skills/rulesgen-harness-update/: SKILL.md
.cursor/rules/: 00-project-domain.mdc  python-service-standards.mdc  tdm_rulesgen.code-workspace
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bandit.yml  ci.yml  claude-code-review.yml  docs.yml
docker/: entrypoint.py
docker/opensandbox/: config.toml
docs/: domain-dictionary.md  getting-started.md  index.md  repository-docs.md
docs/agent-harness/: glossary.md
docs/public/: .order  api-reference.md  configuration.md  databricks.md  getting-started.md  overview.md  python-library.md  repository-docs.md  run-modes.md  safety-guardrails.md  workflows.md
requirements/: NL-to-Python-Generation-DSL.md  NL-to-Python-Generation-Overview.md
samples/: orders.csv
scripts/: configure-github-repo-oss.sh  quick_start.sh  run_stack.sh
src/rulesgen/: __init__.py  container.py  downloads.py  errors.py  library.py  main.py  version_info.py
tests/: conftest.py
tests/contract/: test_docs_crossref.py  test_docs_dsl.py  test_docs_fences.py  test_docs_glossary.py  test_docs_links.py  test_problem_details.py
tests/integration/: test_api_flow.py  test_databricks_openai_smoke.py  test_llm_jailbreak_flow.py
tests/unit/: test_artifact_download_service.py  test_compiler.py  test_databricks_auth.py  test_dataset_upload_service.py  test_generation_engine.py  test_guardrails.py  test_guardrails_llm_guard_optional.py  test_library_api.py  test_llm_gateway.py  test_opensandbox_backends.py  test_opensandbox_runner.py  test_runtime_properties.py  test_settings.py
(+69 files in other folders)
