[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rulesgen"
version = "0.1.0"
description = "Rulesgen REST API foundation for safe rule parsing and execution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "pydantic-settings",
  "httpx",
  "faker",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pip-audit",
  "pytest",
  "pytest-cov",
  "hypothesis",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rulesgen"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
packages = ["rulesgen"]
strict = true
warn_unused_configs = true
disallow_any_generics = true
no_implicit_reexport = true

[tool.uv]
required-version = ">=0.8.0"
