[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rulesgen"
version = "0.3.0"
description = "Rulesgen library with an optional FastAPI app for safe rule parsing and execution."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pydantic>=2",
  "pydantic-settings",
  "httpx",
  "faker",
  "opensandbox>=0.1.7",
  "litellm>=1.83.10",
  "gptcache>=0.1.44",
]

[project.optional-dependencies]
api = [
  "fastapi",
  "uvicorn[standard]",
]
dev = [
  "mypy",
  "pip-audit",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "hypothesis",
  "ruff",
]

[tool.hatch.build]
include = [
  "src/rulesgen/resources/**/*.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rulesgen"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
packages = ["rulesgen"]
strict = true
warn_unused_configs = true
disallow_any_generics = true
no_implicit_reexport = true

[tool.uv]
required-version = ">=0.8.0"

[tool.semantic_release]
commit_parser = "conventional"
allow_zero_version = true
major_on_zero = false
# The release GitHub Action runs in Docker, so it cannot reuse the runner's uv install.
build_command = """
python -m pip install "uv>=0.8.0"
uv build
"""
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.changelog]
mode = "update"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
